<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/activity_background"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_200"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="每天读书一小时"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.chenhaijun.scoreboard.view.piegraph.PieGraph
                    android:id="@+id/pg_activity_project_detail_month"
                    android:layout_width="@dimen/view_size_100"
                    android:layout_height="@dimen/view_size_100"
                    app:pieInnerCircleRatio="210"
                    app:pieSlicePadding="0dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:gravity="center"
                    android:text="@string/detail_target_month"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_50"
                android:orientation="vertical">

                <com.chenhaijun.scoreboard.view.piegraph.PieGraph
                    android:id="@+id/pg_activity_project_detail_total"
                    android:layout_width="@dimen/view_size_100"
                    android:layout_height="@dimen/view_size_100"
                    app:pieInnerCircleRatio="210"
                    app:pieSlicePadding="0dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:gravity="center"
                    android:text="@string/detail_target_total"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30">

        <TextView
            style="@style/style_btn_score"
            android:text="@string/detail_increase_one"/>

        <TextView
            style="@style/style_btn_score"
            android:text="@string/detail_increase_three"/>

        <TextView
            style="@style/style_btn_score"
            android:text="@string/detail_increase_five"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30">

        <TextView
            style="@style/style_btn_score"
            android:text="@string/detail_increase_seven"/>

        <TextView
            style="@style/style_btn_score"
            android:text="@string/detail_decrease_ten"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:orientation="vertical">

        <View
            style="@style/divider_horizontal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="@dimen/padding_5"
            android:paddingLeft="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10"
            android:paddingTop="@dimen/padding_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_record"
                android:textColor="@color/main_title_color"
                android:textSize="@dimen/text_size_14"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/detail_more"
                android:textColor="@color/main_title_color"
                android:textSize="@dimen/text_size_14"/>
        </RelativeLayout>


        <View
            style="@style/divider_horizontal"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:paddingLeft="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10"/>
    </LinearLayout>

</LinearLayout>