<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/activity_background"
              android:orientation="vertical"
              android:paddingTop="@dimen/page_padding_top">
    <View
        style="@style/divider_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/add_project_name"
            android:textColor="@color/main_title_color"
            android:textSize="@dimen/text_size_14"/>

        <EditText
            android:id="@+id/et_activity_add_project_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_80"
            android:background="@null"
            android:hint="@string/add_project_name_hint"
            android:textColor="@color/main_title_color"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/text_size_14"/>
    </RelativeLayout>

    <View
        style="@style/divider_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/add_target_total_score"
            android:textColor="@color/main_title_color"
            android:textSize="@dimen/text_size_14"/>

        <EditText
            android:id="@+id/et_activity_add_project_total_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_80"
            android:background="@null"
            android:hint="@string/add_target_total_score_hint"
            android:textColor="@color/main_title_color"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/text_size_14"/>
    </RelativeLayout>

    <View
        style="@style/divider_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/add_target_month_score"
            android:textColor="@color/main_title_color"
            android:textSize="@dimen/text_size_14"/>

        <EditText
            android:id="@+id/et_activity_add_project_month_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_80"
            android:background="@null"
            android:hint="@string/add_target_month_score_hint"
            android:textColor="@color/main_title_color"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/text_size_14"/>
    </RelativeLayout>

    <View
        style="@style/divider_horizontal"/>

    <TextView
        android:id="@+id/tv_activity_main_add_submit"
        style="@style/style_btn_bottom"
        android:layout_marginTop="@dimen/margin_50"
        android:background="@drawable/selector_btn_bg_blue"
        android:enabled="false"
        android:text="@string/add_project_submit"/>

</LinearLayout>